--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ highlighter: pygments
 
 
 ### content configuration ###
-title:       "SinglePaged - Simple Jekyll template"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
+title:       "EssayMaker"
+keywords:    "essay maker,essay maker online,essay maker free,essay maker free download,essay maker online free,essay maker software,essay maker app,automatic essay maker,argumentative essay maker,an essay maker,apa essay maker,best essay maker,book essay maker,essay maker.com,college essay maker,cheap essay maker,essay maker download,descriptive essay maker,dbq essay maker,essay maker free download,expository essay maker,easy essay maker,essay maker free,essay maker free download,mla format essay maker,title for essay maker,history essay maker,introduction essay maker,instant essay maker,intro essay maker,long essay maker,literary essay maker,mla essay maker,narrative essay maker,essay maker online,outline essay maker,persuasive essay maker online,title of essay maker,persuasive essay maker,photo essay maker,personal essay maker,5 paragraph essay maker,five paragraph essay maker,quick essay maker,reflective essay maker,research essay maker,essay maker software,spanish essay maker,school essay maker,high school essay maker,essay maker tumblr,the essay maker,title essay maker,vocab essay maker,video essay maker,visual essay maker,essay maker website,wikipedia essay maker"
+description: "GET RID OF THAT STUPID PAPER GRAPHIC ORGANIZER."
+source_link: "https://github.com/sargeant45/EssayMaker"
 favicon:     "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
 google_analytics_key: UA-49607422-1 ## put YOUR key here to enable tracking! (blank to disable)
