fixed many bugs, including #8 and #9 - better browser support (shiv) - upgrade browser message on outdated browsers - contextual stuff (sentiment not showing immediately) - further cleanup and such - some styling fixes

--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "sentimood": "~1.1.0",
     "zeroclipboard": "~2.2.0",
     "notifyjs": "~0.3.4"
+  },
+  "devDependencies": {
+    "html5shiv": "~3.7.3"
   }
 }
