--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ### @soops' web gitignore file ###
 
 ### Bower ###
-bower_components
+lib
 .bower-cache
 .bower-registry
 .bower-tmp
@@ -18,6 +18,7 @@ coverage
 .grunt
 .lock-wscript
 build/Release
+node_modules
 
 ### Cloud9 (shouts out to my online ide!) ###
 .c9revisions
