--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An online graphical essay organizer.",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-wiredep": "^2.0.0"
+    "grunt-wiredep": "^2.0.0",
+    "coffee-script": "^1.10.0"
   },
   "repository": {
     "type": "git",
