--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "An online graphical essay organizer.",
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-htmlmin": "^1.2.0",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-uglify": "^1.5.1"
   },
   "repository": {
     "type": "git",
