--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -4,5 +4,5 @@ languages:
 exclude_paths:
     - "lib/*"
     - "src/coffee/js/*"
-    - "src/bootstrap/*"
+    - "src/bootstrap/**/*"
     - "src/template.html"
