--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.0.0",
   "description": "An online graphical essay organizer.",
   "devDependencies": {
-    "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
+    "gulp-bower": "0.0.11",
+    "gulp-coffee": "^2.3.1",
     "gulp-htmlmin": "^1.2.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-uglify": "^1.5.1"
